[metadata]
name = plt-cli
version = 0.1.1
author = Rodrigo Loro Schuller
author_email = rloroschuller@gmail.com
description = A CLI plotting utility
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rlschuller/plt
project_urls =
    Bug Tracker = https://github.com/rlschuller/plt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages =
    plt
include_package_data = true
python_requires = >=3.6
install_requires =
    matplotlib
    plotext
    importlib_resources
scripts = plt/plt
